feat: build with zeit/ncc

--- a/action.yml
+++ b/action.yml
@@ -10,7 +10,7 @@ inputs:
     default: '/lhci_reports'
 runs:
   using: 'node16'
-  main: 'index.js'
+  main: 'dist/index.js'
 branding:
   icon: 'sun'
   color: 'orange'
