--- a/action.yml
+++ b/action.yml
@@ -4,7 +4,7 @@ author: "iyu88"
 inputs:
   lh_directory:  
     description: 'directory path to which the lighthouse is applied'
-  mainfest_path:
+  manifest_path:
     description: 'path to which the reports manifest.json is saved'
     required: true
     default: '/lhci_reports'
